licorne remplacé par un GIF

--- a/RESSOURCE/scss/_base/_fondation.scss
+++ b/RESSOURCE/scss/_base/_fondation.scss
@@ -7,7 +7,7 @@ body, html{
     align-items: center;
     justify-content:start;
     flex-direction: column;
-    background-image: url("public/images/fond-space.jpg");
+    background-color: green;
     background-position: center;
     background-repeat: no-repeat;
     object-fit: cover;
